height fixes - dark mode

--- a/08072020/scss/dark-mode.scss
+++ b/08072020/scss/dark-mode.scss
@@ -1688,7 +1688,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 500px;
+                                height: 505px;
                             }
                         }
                     }
@@ -1871,7 +1871,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 500px;
+                                height: 505px;
                             }
                         }
                     }
@@ -3025,7 +3025,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 450px;
+                                height: 445px;
                             }
                         }
                     }
@@ -3275,7 +3275,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 600px;
+                                height: 595px;
                             }
                         }
                     }
@@ -3648,7 +3648,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 480px;
+                                height: 450px;
                             }
                         }
                     }
@@ -3764,7 +3764,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 580px;
+                                height: 574px;
                             }
                         }
                     }
